force-app/main/default/objects/Cancion__c/Cancion__c.object-meta.xml
<CustomObject>
    <label>Cancion</label>
    <nameField>
        <displayFormat>CAN-{0000}</displayFormat>
        <label>Cancion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>