force-app/main/default/objects/Cancion__c/fields/Cancion__c.field-meta.xml
<CustomField>
    <fullName>Cancion__c</fullName>
    <label>Cancion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>