force-app/main/default/objects/Cancion__c/fields/Letra__c.field-meta.xml
<CustomField>
    <fullName>Letra__c</fullName>
    <label>Letra</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>